--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "tailwind-merge": "^2.0.0",
     "@clerk/nextjs": "^4.29.0",
     "@supabase/supabase-js": "^2.39.0",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@vercel/analytics": "^1.1.1",
+    "framer-motion": "^10.16.16",
+    "svix": "^1.15.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
