--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0",
-    "@clerk/nextjs": "^4.29.0",
+
     "@supabase/supabase-js": "^2.39.0",
     "zustand": "^5.0.2",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -27,8 +27,7 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/analytics": "^1.1.1",
-    "framer-motion": "^10.16.16",
-    "svix": "^1.15.0"
+    "framer-motion": "^10.16.16"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
